--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-univention-support-info (0.1.0) UNRELEASED; urgency=low
+univention-db-tools (0.1.0) UNRELEASED; urgency=low
 
   * Initial package (Keycloak - support installation on Backups)
 
- -- Nikola Radovanovic <radovanovic.extern@univention.de>  Fri, 07 OCt 2022 09:67:14 +0200
+ -- Nikola Radovanovic <radovanovic.extern@univention.de>  Fri, 07 Oct 2022 09:67:14 +0200
